KSENROLL-9701: Added fixed column widths for managed time slot to help lessen the whitespace in each column and help unify spacing.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@57539 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -144,9 +144,76 @@
   max-width: 1105px;
   width: 93.75%;
 }
+
 /************************************** END CSS COLUMN GRID **************************************/
 
+/************************************** CSS COLUMN Fixed Widths **************************************/
+ /**These widths are to help standardise columns. As of Oct 2013 they are used in Manage Time Slot***/
+.fixedCol_1
+{
+    width:35px;
+}
 
+.fixedCol_2
+{
+    width:45px;
+}
+
+.fixedCol_3
+{
+    width:50px;
+}
+
+.fixedCol_4
+{
+    width:60px;
+}
+
+.fixedCol_5
+{
+    width:65px;
+}
+
+.fixedCol_6
+{
+    width:75px;
+}
+
+.fixedCol_7
+ {
+     width:80px;
+ }
+
+ .fixedCol_8
+ {
+     width:90px;
+ }
+
+.fixedCol_9
+{
+    width:100px;
+}
+
+.fixedCol_10
+{
+    width:110px;
+}
+
+.fixedCol_11
+ {
+     width:120px;
+ }
+
+ .fixedCol_12
+ {
+     width:150px;
+ }
+
+ .fixedCol_13
+ {
+     width:200px;
+ }
+/************************************** END CSS COLUMN Fixed Widths **************************************/
 
 
 /************************************** VIEW REGISTRATION GROUP STATE COLUMN **************************************
